<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/accent_material_dark">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:textColor="#ff0"
        android:gravity="center"
        android:text="@string/welcome_title"/>
	<ImageView 
	    android:layout_marginTop="20dp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:scaleType="fitXY"
	    android:layout_gravity="center_horizontal"
	    android:src="@drawable/cat"/>
	<LinearLayout 
	    android:layout_marginTop="100dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:text="@string/name_txt"
	        android:textSize="14sp"/>
	    <com.example.gank.widget.EditTextWithDelete 
	        android:id="@+id/edt_name"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="6"
	        android:hint="@string/name_edit_hint"
	        android:textSize="14sp"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_marginTop="20dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:layout_gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:text="@string/pwd_txt"
	        android:textSize="14sp"/>
	    <com.example.gank.widget.EditTextWithDelete 
	        android:id="@+id/edt_pwd"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="6"
	        android:hint="@string/pwd_edit_hint"
	        android:textSize="14sp"
	        android:inputType="textPassword"/>
	</LinearLayout>
		<CheckBox 
	    android:id="@+id/checkbox_remember"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dp"
	    android:layout_marginRight="50dp"
	    android:text="@string/remember_checkbox"
	    android:textSize="14sp"
	    android:layout_gravity="right"/>
	<Button 
	    android:id="@+id/btn_login"
	    android:layout_marginTop="30dp"
	    android:layout_width="180dp"
	    android:layout_gravity="center_horizontal"
	    android:layout_height="wrap_content"
	    android:text="@string/login_btn"
	    android:textSize="24sp"
	    android:background="@drawable/btn_shape"/>
	<TextView 
	    android:id="@+id/txt_register"
	    android:text="@string/register_txt"
	    android:textSize="14sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textColor="#fff"
	    android:gravity="center"
	    android:layout_gravity="center_horizontal"/>
	<TextView 
	    android:layout_marginTop="5dp"
	    android:id="@+id/txt_guest_login"
	    android:text="@string/guest_login_txt"
	    android:textSize="14sp"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="#fff"
	    android:gravity="center"
	    android:layout_gravity="center_horizontal"/>
</LinearLayout>
