<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#400a" 
    android:paddingBottom="10dp">
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:gravity="center"
        android:text="@string/register_title_txt"/>
    <LinearLayout 
	    android:layout_marginTop="40dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:text="@string/name_txt"
	        android:textSize="14sp"/>
	    <EditText 
	        android:id="@+id/edt_register_name"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="6"
	        android:hint="@string/name_edit_hint"
	        android:textSize="14sp"/>
	   
	</LinearLayout>
	<LinearLayout 
	    android:layout_marginTop="10dp"
	    android:layout_marginLeft="50dp"
	    android:layout_marginRight="50dp"
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content">
	    <TextView 
	        android:layout_gravity="center"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="2"
	        android:text="@string/pwd_txt"
	        android:textSize="14sp"/>
	    <EditText 
	        android:id="@+id/edt_register_pwd"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="6"
	        android:hint="@string/pwd_edit_hint"
	        android:textSize="14sp"
	        android:password="true"/>
	   
	</LinearLayout>
	<Button 
	    android:id="@+id/btn_register"
	    android:layout_marginTop="20dp"
	    android:layout_width="150dp"
	    android:text="@string/register_btn"
	    android:textSize="24sp"
	    android:background="@drawable/btn_shape"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"/>

</LinearLayout>
